Fixed wrong margin for small controls

--- a/epidark.user.css
+++ b/epidark.user.css
@@ -1107,8 +1107,8 @@ fieldset{
     color: rgba(255, 255, 255, .5);
     transition: .3s cubic-bezier(0.4, 0, 0.2, 1);
     position:absolute;
-    top:4px;
-    right:4px;
+    top:8px;
+    right:8px;
     margin:0px;
 }
 
@@ -1165,7 +1165,7 @@ fieldset{
     background:none;
     border:none;
     font-size:0;
-    margin:4px;
+    margin:8px;
     color:rgba(255, 255, 255, .5);
     border-radius: 100%;
     transition: .3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1257,8 +1257,8 @@ fieldset{
     color: rgba(255, 255, 255, .5);
     transition: .3s cubic-bezier(0.4, 0, 0.2, 1);
     position:absolute;
-    top:4px;
-    right:4px;
+    top:8px;
+    right:8px;
     margin:0px;
 }
 
